Change title, short url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Corrected votes by the Members of the European Parliament: Intro</title>
+    <title>Projects related to the European Parliament: Intro</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quando" />
     <style type="text/css" scoped="scoped">
     h1, h2, h3 {
@@ -15,14 +15,14 @@
 
 <body>
     <h1>
-        <a href="http://joelpurra.com/r/europarl">Corrected votes by the Members of the European Parliament</a>: Intro
+        <a href="http://joelpurra.com/r/euparl">Projects related to the European Parliament</a>: Intro
     </h1>
     <section>
         <h2>
             Resources
         </h2>
         <ul>
-            <li><a href="http://joelpurra.com/r/europarl/">This page</a>
+            <li><a href="http://joelpurra.com/r/euparl/">This page</a>
             </li>
             <li><a href="http://europarl.me/">Europarl.me</a>
             </li>
@@ -94,7 +94,7 @@
     </section>
     <footer class="container">
         <hr />
-        <a href="http://joelpurra.com/r/europarl">Corrected votes by the Members of the European Parliament</a> &copy; 2013 <a href="http://joelpurra.com/">Joel Purra</a>. Licenced under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.
+        <a href="http://joelpurra.com/r/euparl">Projects related to the European Parliament</a> &copy; 2014 <a href="http://joelpurra.com/">Joel Purra</a>. Licenced under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.
     </footer>
 
 
