One line explanations for the open source projects

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
     <section>
         <h2>
-            Projects
+            Open source projects
         </h2>
         <ul>
             <li>
-                <a href="https://github.com/joelpurra/ep-the-corrections">ep-the-corrections</a>
+                <a href="https://github.com/joelpurra/ep-the-corrections">ep-the-corrections</a>: generates the HTML reports, based on data from ep-erroneous-votes.
             </li>
             <li>
-                <a href="https://github.com/joelpurra/ep-erroneous-votes">ep-erroneous-votes</a>
+                <a href="https://github.com/joelpurra/ep-erroneous-votes">ep-erroneous-votes</a>: transforms EP voting data to only include corrected votes.
             </li>
         </ul>
     </section>
