Use MEP instead of member in a few places

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                     <a href="output/2014-01-28T231051Z/correctionals.json">Data dump.</a>
                 </li>
                 <li>
-                    <a href="output/2014-01-28T231051Z/correctionals.name-strings.json">Data dump with normalized member names.</a>
+                    <a href="output/2014-01-28T231051Z/correctionals.name-strings.json">Data dump with normalized MEP names.</a>
                 </li>
                 <li>
-                    <a href="output/2014-01-28T231051Z/worst-offenders.txt">List of members (grouped by name) who have made corrections, ordered by number of corrections in ascending order.</a>
+                    <a href="output/2014-01-28T231051Z/worst-offenders.txt">List of MEPs (grouped by name) who have made corrections, ordered by number of corrections in ascending order.</a>
                 </li>
             </ul>
         </section>
@@ -145,10 +145,10 @@
                     <a href="output/2014-01-27T151038Z/correctionals.json">Data dump.</a>
                 </li>
                 <li>
-                    <a href="output/2014-01-27T151038Z/correctionals.name-strings.json">Data dump with normalized member names.</a>
+                    <a href="output/2014-01-27T151038Z/correctionals.name-strings.json">Data dump with normalized MEP names.</a>
                 </li>
                 <li>
-                    <a href="output/2014-01-27T151038Z/worst-offenders.txt">List of members (grouped by name) who have made corrections, ordered by number of corrections in ascending order.</a>
+                    <a href="output/2014-01-27T151038Z/worst-offenders.txt">List of MEPs (grouped by name) who have made corrections, ordered by number of corrections in ascending order.</a>
                 </li>
             </ul>
         </section>
@@ -172,10 +172,10 @@
                     <a href="output/2014-01-27T124832Z/correctionals.json">Data dump.</a>
                 </li>
                 <li>
-                    <a href="output/2014-01-27T124832Z/correctionals.name-strings.json">Data dump with normalized member names.</a>
+                    <a href="output/2014-01-27T124832Z/correctionals.name-strings.json">Data dump with normalized MEP names.</a>
                 </li>
                 <li>
-                    <a href="output/2014-01-27T124832Z/worst-offenders.txt">List of members (grouped by name) who have made corrections, ordered by number of corrections in ascending order.</a>
+                    <a href="output/2014-01-27T124832Z/worst-offenders.txt">List of MEPs (grouped by name) who have made corrections, ordered by number of corrections in ascending order.</a>
                 </li>
             </ul>
         </section>
