Change to ISO 8601 date format for upstream data source date

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </p>
             <ul>
                 <li>
-                    Based on <a href="http://parltrack.euwiki.org/dumps/ep_votes.json.xz">Parltrack's ep_votes.json from 28-Jan-2014 02:35</a>.
+                    Based on <a href="http://parltrack.euwiki.org/dumps/ep_votes.json.xz">Parltrack's ep_votes.json from 2014-01-28 02:35</a>.
                 </li>
                 <li>Total, unfiltered votings in dataset: 14.124</li>
                 <li>Total, unfiltered votes in dataset: 8.770.020</li>
