--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     </section>
     <footer class="container">
         <hr />
-        <a href="http://joelpurra.com/r/euparl">Projects related to the European Parliament</a> &copy; 2014 <a href="http://joelpurra.com/">Joel Purra</a>. Licenced under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.
+        <a href="http://joelpurra.com/r/euparl">Projects related to the European Parliament</a> &copy; 2014 <a href="http://joelpurra.com/">Joel Purra</a>. Licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.
     </footer>
 
 
