--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="http://europarl.me/">Europarl.me</a>: this code was initially written during the hackathon in January 2014.
             </li>
             <li>
-                <a href="http://parltrack.euwiki.org/">Parltrack</a>: the upstream data source.
+                <a href="http://parltrack.euwiki.org/">Parltrack</a>: the upstream data source, licensed under the <a href="http://opendatacommons.org/licenses/odbl/">Open Database License</a>.
             </li>
         </ul>
     </section>
@@ -223,7 +223,8 @@
                 Thanks to a journalist, errors propagated to the data with normalized names, which is the source for the lists of "worst offenders", have been discovered!
             </p>
             <p>
-                Since the data source in Parltrack is PDF files, which is far from optimal, there are sometimes problems with parsing them into a usable database. Having incorrect names affects the total count, since the totals have been grouped by name. This is the most recently released <a href="output/2014-01-28T231051Z/worst-offenders.txt">list of MEPs (grouped by name) who have made corrections, ordered by number of corrections in ascending order</a> - <em>it contains the incorrect grouping</em>. The other lists have been unlinked, at least for now, and I'll work on a solution.
+                Since the data source in Parltrack is PDF files, which is far from optimal, there are sometimes problems with parsing them into a usable database. Having incorrect names affects the total count, since the totals have been grouped by name. This is the most recently released <a href="output/2014-01-28T231051Z/worst-offenders.txt">list of MEPs (grouped by name) who have made corrections, ordered by number of corrections in ascending order</a> -
+                <em>it contains the incorrect grouping</em>. The other lists have been unlinked, at least for now, and I'll work on a solution.
             </p>
         </section>
 
@@ -288,7 +289,15 @@
     </section>
     <footer class="container">
         <hr />
-        <a href="http://joelpurra.com/r/euparl">Projects related to the European Parliament</a> &copy; 2014 <a href="http://joelpurra.com/">Joel Purra</a>. Licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.
+        <p>
+            <a href="http://joelpurra.com/r/euparl">Projects related to the European Parliament</a> &copy; 2014 <a href="http://joelpurra.com/">Joel Purra</a>.
+        </p>
+        <ul>
+            <li>Data is made available under the <a href="http://opendatacommons.org/licenses/odbl/1.0/">Open Database License 1.0</a>.</li>
+            <li>Any rights in individual contents of the database are licensed under the <a href="http://opendatacommons.org/licenses/dbcl/1.0/">Database Contents License 1.0</a>.</li>
+            <li>Site content licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</li>
+            <li>Code licensed according to terms in each separate project.</li>
+        </ul>
     </footer>
 
 
