Remove the word intro in the title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Projects related to the European Parliament: Intro</title>
+    <title>Projects related to the European Parliament</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quando" />
     <style type="text/css" scoped="scoped">
     body {
@@ -34,7 +34,7 @@
 
 <body>
     <h1>
-        <a href="http://joelpurra.com/r/euparl">Projects related to the European Parliament</a>: Intro
+        <a href="http://joelpurra.com/r/euparl">Projects related to the European Parliament</a>
     </h1>
     <section>
         <h2>
