The styles should not be scoped

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Projects related to the European Parliament</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quando" />
-    <style type="text/css" scoped="scoped">
+    <style type="text/css">
     body {
         padding-left: 10%;
         padding-right: 10%;
@@ -17,7 +17,7 @@
         border-bottom: 1px solid lightgrey;
     }
     .warning:before {
-        content: "Warning";
+        content:"Warning";
         font-weight: bold;
         font-size: 0.6em;
         font-family: Helvetica, Verdana, sans-serif;
