Mention output changes

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </time>
             </h3>
             <p>
-                Changes: improved links to MEPs pages on Parltrack.
+                Changes: used a new dataset from Parltrack, that removed 2142 duplicate votings.
             </p>
             <ul>
                 <li>
