Removed duplicated remove notice

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <strike>Data dump with normalized MEP names.</strike>
                     </li>
                     <li>
-                        <strike>List of MEPs (grouped by name) who have made corrections, ordered by number of corrections in ascending order.</strike>(Removed for now, see log entry from 2014-01-29.)
+                        <strike>List of MEPs (grouped by name) who have made corrections, ordered by number of corrections in ascending order.</strike>
                     </li>
                 </ul>
             </section>
