Add link to the source for this page

--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             <li>
                 <a href="https://github.com/joelpurra/ep-erroneous-votes">ep-erroneous-votes</a>: transforms EP voting data to only include corrected votes.
             </li>
+            <li>
+                <a href="https://github.com/joelpurra/ep-projects">ep-projects</a>: the source code for this page.
+            </li>
         </ul>
     </section>
 
