Move old note about terms, clarify in terms log

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </h2>
 
         <p>
-            Votings in the European Parliament that have corrections. Since the statistics are run over the complete data set, it doesn't take the five year parliament terms into consideration (yet).
+            Votings in the European Parliament that have corrections.
         </p>
 
         <section>
@@ -287,6 +287,9 @@
                     </time>
                 </h3>
                 <p>
+                     Since the statistics, these and before this date, are run over the complete data set, it doesn't take the five year parliament terms into consideration.
+                </p>
+                <p>
                     Changes: used a new dataset from Parltrack, that removed 2142 duplicate votings.
                 </p>
                 <ul>
@@ -450,7 +453,7 @@
                 Results per European Parliament term
             </h3>
             <p>
-                There have been several requests to split the voting data per term, so now that is done for term 5, 6 and 7. Term 5 is only there to verify that there are no votes that are from that term, and will likely be excluded until there is. Hopefully there this will also lead to more automation of data exports.
+                There have been several requests to split the voting data per term, so now that is done for term 5, 6 and 7. Unfortunately, there are no corrections (recorded or extracted) from 2004, 2005 and 2006 - it's missing from the upstream dataset. Term 5 is only there to verify that there are no votes that are from that term, and will likely be excluded until there is. Hopefully there this will also lead to more automation of data exports.
             </p>
         </section>
 
