Link to the EuroParl.me article

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                 Publication on <a href="http://europarl.me/">Europarl.me</a>
             </h3>
             <p>
-                Now that the hackathon is officially over, there is a list of projects people have worked on. These projects are listed there!
+                Now that the hackathon is officially over, there is a list of projects people have worked on. <a href="http://europarl.me/analysing-the-corrected-votes-of-the-meps">These projects are listed there!</a>
             </p>
         </section>
 
