--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head lang="en">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Projects related to the European Parliament</title>
+
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quando" />
     <style type="text/css">
     body {
@@ -30,6 +31,7 @@
     }
     </style>
 
+    <link rel="shortlink" type="text/html" href="http://joelpurra.com/r/euparl" />
 </head>
 
 <body>
@@ -558,14 +560,20 @@
     <footer class="container">
         <hr />
         <p>
-            <a href="http://joelpurra.com/r/euparl">Projects related to the European Parliament</a> &copy; 2014 <a href="http://joelpurra.com/">Joel Purra</a>.
+            <a href="https://github.com/joelpurra/ep-the-corrections" rel="source">European Parliament: The Corrections (ep-the-corrections)</a> &copy; 2014 <a href="http://joelpurra.com/" rel="author me">Joel Purra</a>.
         </p>
         <ul>
-            <li>Data is made available under the <a href="http://opendatacommons.org/licenses/odbl/1.0/">Open Database License 1.0</a>.</li>
-            <li>Any rights in individual contents of the database are licensed under the <a href="http://opendatacommons.org/licenses/dbcl/1.0/">Database Contents License 1.0</a>.</li>
-            <li>Site content licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</li>
+            <li>Data is made available under the <a href="http://opendatacommons.org/licenses/odbl/1.0/" rel="external license">Open Database License 1.0</a>.</li>
+            <li>Any rights in individual contents of the database are licensed under the <a href="http://opendatacommons.org/licenses/dbcl/1.0/" rel="external license">Database Contents License 1.0</a>.</li>
+            <li>Site content licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" rel="external license">CC BY-SA 4.0</a>.</li>
             <li>Code licensed according to terms in each separate project.</li>
         </ul>
+        <p>
+            Using data on erroneous/corrected votes in <a href="https://github.com/joelpurra/ep-erroneous-votes">ep-erroneous-votes</a>, based on <a href="http://parltrack.euwiki.org/dumps" rel="external">open data dumps</a>, licensed under the <a href="http://opendatacommons.org/licenses/odbl/" rel="external license">Open Database License</a>, from <a href="http://parltrack.euwiki.org/" rel="external">Parltrack</a>, to visalize erroneous, and subsequently corrected, votes by <a href="http://www.europarl.europa.eu/meps/" rel="external">Members</a> of the <a href="http://www.europarl.europa.eu/" rel="external">European Parliament</a>.
+        </p>
+        <p>
+            Part of the <a href="http://joelpurra.com/r/euparl" rel="home">projects related to the European Parliament</a>. Developed during the <a href="http://europarl.me/">Europarl Hackathon</a>, in preparation for the <a href="http://www.elections2014.eu/">European elections 2014</a>.
+        </p>
     </footer>
 
 
