Add language to the MO article

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                     EuroParl.me: <a href="http://europarl.me/analysing-the-corrected-votes-of-the-meps">Analysing the corrected votes of the MEPs</a>
                 </li>
                 <li>
-                    Mondiaal Nieuws: <a href="http://www.mo.be/analyse/de-zwarte-doos-van-europese-besluitvorming">De zwarte doos van Europese besluitvorming</a>
+                    Mondiaal Nieuws: <a href="http://www.mo.be/analyse/de-zwarte-doos-van-europese-besluitvorming">De zwarte doos van Europese besluitvorming</a> (dutch)
                 </li>
             </ul>
         </section>
