--- a/index.html
+++ b/index.html
@@ -829,6 +829,6 @@
 
 
 </body>
-<!-- jekyll-theme-demivolte, http://joelpurra.github.io/jekyll-theme-demivolte by Joel Purra, https://joelpurra.com/ -->
+<!-- jekyll-theme-demivolte, https://joelpurra.github.io/jekyll-theme-demivolte by Joel Purra, https://joelpurra.com/ -->
 
 </html>
