Moar HTTPS in links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Projects related to the European Parliament</title>
 
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quando" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quando" />
     <style type="text/css">
     body {
         padding-left: 10%;
