--- a/index.html
+++ b/index.html
@@ -800,34 +800,7 @@
             Part of the <a href="https://joelpurra.com/r/euparl" rel="home">projects related to the European Parliament</a>. Developed during the <a href="http://europarl.me/">Europarl Hackathon</a>, in preparation for the <a href="http://www.elections2014.eu/">European elections 2014</a>.
         </p>
     </footer>
-
-
-    <!-- DO NOT COPY THIS SCRIPT TAG -->
-    <!-- It's used for my statistics -->
-    <!-- DO NOT COPY THIS SCRIPT TAG -->
-    <script type="text/javascript">
-    //<![CDATA[
-    // DO NOT COPY THIS SCRIPT TAG
-    // It's used for my statistics
-    // DO NOT COPY THIS SCRIPT TAG
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-15653943-1', 'joelpurra.com');
-    ga('send', 'pageview');
-    //]]>
-    </script>
-
-
+    <!--#include virtual="/tracker/piwik.html"-->
 </body>
 <!-- jekyll-theme-demivolte, https://joelpurra.github.io/jekyll-theme-demivolte by Joel Purra, https://joelpurra.com/ -->
 
