Use HTTPS for links where possible

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="http://europarl.me/">Europarl.me</a>: this code was initially written during the hackathon in January 2014.
             </li>
             <li>
-                <a href="http://parltrack.euwiki.org/">Parltrack</a>: the upstream data source, licensed under the <a href="http://opendatacommons.org/licenses/odbl/">Open Database License</a>.
+                <a href="http://parltrack.euwiki.org/">Parltrack</a>: the upstream data source, licensed under the <a href="https://opendatacommons.org/licenses/odbl/">Open Database License</a>.
             </li>
         </ul>
     </section>
@@ -579,11 +579,11 @@
                         2014-02-04
                     </time>
                     Altinget.dk:
-                    <a href="http://www.altinget.dk/artikel/danske-socialdemokrater-er-eu-mestre-i-stemmeaendring">Danske socialdemokrater er EU-mestre i stemmeændring</a>
+                    <a href="https://altinget.dk/artikel/danske-socialdemokrater-er-eu-mestre-i-stemmeaendring">Danske socialdemokrater er EU-mestre i stemmeændring</a>
                     (danish)
                 </h3>
                 <p>
-                    Article in <a href="http://www.altinget.dk/">Altinget.dk</a>, a Danish political newspaper, by <a href="http://www.rikkealbrechtsen.dk/">Rikke Albrechtsen</a>, about the Danish social democrat MEPs and their comparatively high number of corrected votes.
+                    Article in <a href="https://altinget.dk/">Altinget.dk</a>, a Danish political newspaper, by <a href="http://www.rikkealbrechtsen.dk/">Rikke Albrechtsen</a>, about the Danish social democrat MEPs and their comparatively high number of corrected votes.
                 </p>
                 <blockquote>
                     Looking for errors: Danish Social Democrats in the European Parliament are those among all EU elected representatives, who most often corrects their votes. Not credible, says the man behind the collected data. Democratic diligence is the answer from the list's top scorer, Britta Thomsen.
@@ -594,7 +594,7 @@
                 <ul>
                     <li>
                         Ekstra Bladet:
-                        <a href="http://ekstrabladet.dk/nyheder/politik/article2212313.ece">Danske socialdemokrater er EU-mestre i stemmeændring</a>
+                        <a href="https://ekstrabladet.dk/nyheder/politik/article2212313.ece">Danske socialdemokrater er EU-mestre i stemmeændring</a>
                         (danish)
                     </li>
                     <li>
@@ -609,7 +609,7 @@
                     </li>
                     <li>
                         Kristeligt Dagblad:
-                        <a href="http://www.kristeligt-dagblad.dk/artikel/544130:Danmark--Danske-socialdemokrater-er-EU-mestre-i-stemmeaendring">Danske socialdemokrater er EU-mestre i stemmeændring</a>
+                        <a href="https://www.kristeligt-dagblad.dk/artikel/544130:Danmark--Danske-socialdemokrater-er-EU-mestre-i-stemmeaendring">Danske socialdemokrater er EU-mestre i stemmeændring</a>
                         (danish)
                     </li>
                 </ul>
@@ -634,7 +634,7 @@
                 </li>
                 <li>
                     The Guardian:
-                    <a href="http://www.theguardian.com/technology/2014/jan/28/hackers-hold-the-european-parliament-to-account">Hackers hold the European parliament to account</a>
+                    <a href="https://www.theguardian.com/technology/2014/jan/28/hackers-hold-the-european-parliament-to-account">Hackers hold the European parliament to account</a>
                 </li>
                 <li>
                     EuroParl.me: <a href="http://europarl.me/analysing-the-corrected-votes-of-the-meps">Analysing the corrected votes of the MEPs</a>
