Add readme, license, donation links

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
         background-color: #FFF6BF;
         border: 1px solid #FFD324;
     }
+    .donate kbd {
+        display: inline-block;
+        color: #555;
+        vertical-align: middle;
+        padding: 0.1em;
+        padding-left: 0.3em;
+        padding-right: 0.3em;
+        background-color: #fcfcfc;
+        border: solid 1px #ccc;
+        border-bottom-color: #bbb;
+        border-radius: 0.3em;
+        box-shadow: inset 0 -1px 0 #bbb;
+        font-family: Helvetica, Verdana, sans-serif;
+    }
     </style>
 
     <link rel="shortlink" type="text/html" href="https://joelpurra.com/r/euparl" />
@@ -36,15 +50,16 @@
 
 <body>
     <h1>
-        <a href="https://joelpurra.com/r/euparl">Projects related to the European Parliament</a>
+        <a href="https://joelpurra.com/projects/european-parliament/">Projects related to the European Parliament</a>
     </h1>
+
     <section>
         <h2>
             Resources
         </h2>
         <ul>
             <li>
-                <a href="https://joelpurra.com/r/euparl">This page</a>
+                <a href="https://joelpurra.com/projects/european-parliament/">This page</a>
             </li>
             <li>
                 <a href="http://europarl.me/">Europarl.me</a>: this code was initially written during the hackathon in January 2014.
@@ -84,6 +99,25 @@
 
         <p>
             My inital thought regarding these corrected votes, is that they are purely erroneous button clicks in the electronic voting process. The number of corrected votes during certain votings, the number of corrected votes some individual MEPs have recorded and the obvious group belongings of the correctors, seem to tell a different story though. I now leave it up to you to dig deeper. I will be here to assist, if there are questions or suggestions.
+        </p>
+    </section>
+
+    <section>
+        <h2>
+            Donate
+        </h2>
+        <p>
+            <em>This data, research, software, and analysis is driven by volunteer work and shared completely free.</em> You even get the source code and data for free. To develop open source software is not without cost though — it takes technical knowledge, time, and effort.
+        </p>
+        <p>
+            <em>You don't have to be a developer to support data-driven research!</em> If you want to receive personal support, or just feel all warm and fuzzy inside from helping open source development, donations are very welcome.
+        </p>
+
+        <p class="donate">
+          <a href="https://joelpurra.com/donate/proceed/?amount=5&currency=usd"><kbd>Donate $5 now</kbd></a>
+          <a href="https://joelpurra.com/donate/proceed/?amount=25&currency=usd"><kbd>Donate $25 now</kbd></a>
+          <a href="https://joelpurra.com/donate/proceed/?amount=100&currency=usd&invoice=true"><kbd>Donate $100 now</kbd></a>
+          <a href="https://joelpurra.com/donate/"><kbd>More options</kbd></a>
         </p>
     </section>
 
@@ -785,7 +819,7 @@
     <footer class="container">
         <hr />
         <p>
-            <a href="https://github.com/joelpurra/ep-the-corrections" rel="source">European Parliament: The Corrections (ep-the-corrections)</a> &copy; 2014, 2015, 2016, 2017 <a href="https://joelpurra.com/" rel="author me">Joel Purra</a>.
+            <a href="https://github.com/joelpurra/ep-projects" rel="source">Projects related to the European Parliament</a> &copy; 2014, 2015, 2016, 2017 <a href="https://joelpurra.com/" rel="author me">Joel Purra</a>.
         </p>
         <ul>
             <li>Data is made available under the <a href="http://opendatacommons.org/licenses/odbl/1.0/" rel="external license">Open Database License 1.0</a>.</li>
@@ -797,7 +831,13 @@
             Using data on erroneous/corrected votes in <a href="https://github.com/joelpurra/ep-erroneous-votes">ep-erroneous-votes</a>, based on <a href="http://parltrack.euwiki.org/dumps" rel="external">open data dumps</a> from <a href="http://parltrack.euwiki.org/" rel="external">Parltrack</a> licensed under the <a href="http://opendatacommons.org/licenses/odbl/" rel="external license">Open Database License</a>, to visualize erroneous, and subsequently corrected, votes by <a href="http://www.europarl.europa.eu/meps/" rel="external">Members</a> of the <a href="http://www.europarl.europa.eu/" rel="external">European Parliament</a>.
         </p>
         <p>
-            Part of the <a href="https://joelpurra.com/r/euparl" rel="home">projects related to the European Parliament</a>. Developed during the <a href="http://europarl.me/">Europarl Hackathon</a>, in preparation for the <a href="http://www.elections2014.eu/">European elections 2014</a>.
+            Part of the <a href="https://joelpurra.com/projects/european-parliament/" rel="home">projects related to the European Parliament</a>. Developed during the <a href="http://europarl.me/">Europarl Hackathon</a>, in preparation for the <a href="http://www.elections2014.eu/">European elections 2014</a>.
+        </p>
+        <p class="donate">
+          <a href="https://joelpurra.com/donate/proceed/?amount=5&currency=usd"><kbd>Donate $5 now</kbd></a>
+          <a href="https://joelpurra.com/donate/proceed/?amount=25&currency=usd"><kbd>Donate $25 now</kbd></a>
+          <a href="https://joelpurra.com/donate/proceed/?amount=100&currency=usd&invoice=true"><kbd>Donate $100 now</kbd></a>
+          <a href="https://joelpurra.com/donate/"><kbd>More options</kbd></a>
         </p>
     </footer>
     <!--#include virtual="/tracker/piwik.html"-->
